--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "sass": "^1.75.0",
+    "sitemap": "^8.0.0",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
   },
